# tldw

./: .gitignore  README.md  install.md  main.py  pyproject.toml  spec.md
backend/: main.py
docs/: install.md  spec.md
frontend/: app.js  index.html  styles.css
utils/: python-version-test.py
