[project]
name = "tldw"
version = "0.1.0"
description = ""
authors = [
    {name = "Dave Mateer",email = "davemateer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi >=0.116.1",
    "uvicorn >=0.35.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
